Update android/platform/libcore/ojluni/src/main/java/java/time/zone
Per Android 13 version some method return List.of(), but the method is doing the same thing, so I keep the original version.

#J2ObjC_Android13_JRE_Upgrade_2022

PiperOrigin-RevId: 504421911