@@ -78,60 +78,52 @@ import java.util.Objects;
 
 /**
  * A transition between two offsets caused by a discontinuity in the local time-line.
- * <p>
- * A transition between two offsets is normally the result of a daylight savings cutover.
- * The discontinuity is normally a gap in spring and an overlap in autumn.
- * {@code ZoneOffsetTransition} models the transition between the two offsets.
- * <p>
- * Gaps occur where there are local date-times that simply do not exist.
- * An example would be when the offset changes from {@code +03:00} to {@code +04:00}.
- * This might be described as 'the clocks will move forward one hour tonight at 1am'.
- * <p>
- * Overlaps occur where there are local date-times that exist twice.
- * An example would be when the offset changes from {@code +04:00} to {@code +03:00}.
- * This might be described as 'the clocks will move back one hour tonight at 2am'.
  *
- * @implSpec
- * This class is immutable and thread-safe.
+ * <p>A transition between two offsets is normally the result of a daylight savings cutover. The
+ * discontinuity is normally a gap in spring and an overlap in autumn. {@code ZoneOffsetTransition}
+ * models the transition between the two offsets.
  *
+ * <p>Gaps occur where there are local date-times that simply do not exist. An example would be when
+ * the offset changes from {@code +03:00} to {@code +04:00}. This might be described as 'the clocks
+ * will move forward one hour tonight at 1am'.
+ *
+ * <p>Overlaps occur where there are local date-times that exist twice. An example would be when the
+ * offset changes from {@code +04:00} to {@code +03:00}. This might be described as 'the clocks will
+ * move back one hour tonight at 2am'.
+ *
+ * @implSpec This class is immutable and thread-safe.
  * @since 1.8
  */
-public final class ZoneOffsetTransition
-        implements Comparable<ZoneOffsetTransition>, Serializable {
+public final class ZoneOffsetTransition implements Comparable<ZoneOffsetTransition>, Serializable {
 
-    /**
-     * Serialization version.
-     */
+    /** Serialization version. */
     private static final long serialVersionUID = -6946044323557704546L;
-    /**
-     * The local transition date-time at the transition.
-     */
+    /** The transition epoch-second. */
+    private final long epochSecond;
+    /** The local transition date-time at the transition. */
     private final LocalDateTime transition;
-    /**
-     * The offset before transition.
-     */
+    /** The offset before transition. */
     private final ZoneOffset offsetBefore;
-    /**
-     * The offset after transition.
-     */
+    /** The offset after transition. */
     private final ZoneOffset offsetAfter;
 
-    //-----------------------------------------------------------------------
+    // -----------------------------------------------------------------------
     /**
      * Obtains an instance defining a transition between two offsets.
-     * <p>
-     * Applications should normally obtain an instance from {@link ZoneRules}.
-     * This factory is only intended for use when creating {@link ZoneRules}.
      *
-     * @param transition  the transition date-time at the transition, which never
-     *  actually occurs, expressed local to the before offset, not null
-     * @param offsetBefore  the offset before the transition, not null
-     * @param offsetAfter  the offset at and after the transition, not null
+     * <p>Applications should normally obtain an instance from {@link ZoneRules}. This factory is only
+     * intended for use when creating {@link ZoneRules}.
+     *
+     * @param transition the transition date-time at the transition, which never actually occurs,
+     *     expressed local to the before offset, not null
+     * @param offsetBefore the offset before the transition, not null
+     * @param offsetAfter the offset at and after the transition, not null
      * @return the transition, not null
-     * @throws IllegalArgumentException if {@code offsetBefore} and {@code offsetAfter}
-     *         are equal, or {@code transition.getNano()} returns non-zero value
+     * @throws IllegalArgumentException if {@code offsetBefore} and {@code offsetAfter} are equal, or
+     *     {@code transition.getNano()} returns non-zero value
      */
-    public static ZoneOffsetTransition of(LocalDateTime transition, ZoneOffset offsetBefore, ZoneOffset offsetAfter) {
+    public static ZoneOffsetTransition of(
+          LocalDateTime transition, ZoneOffset offsetBefore, ZoneOffset offsetAfter) {
         Objects.requireNonNull(transition, "transition");
         Objects.requireNonNull(offsetBefore, "offsetBefore");
         Objects.requireNonNull(offsetAfter, "offsetAfter");
@@ -141,36 +133,39 @@ public final class ZoneOffsetTransition
         if (transition.getNano() != 0) {
             throw new IllegalArgumentException("Nano-of-second must be zero");
         }
-        return new ZoneOffsetTransition(transition, offsetBefore, offsetAfter);
+    return new ZoneOffsetTransition(transition, offsetBefore, offsetAfter);
     }
 
     /**
      * Creates an instance defining a transition between two offsets.
      *
-     * @param transition  the transition date-time with the offset before the transition, not null
-     * @param offsetBefore  the offset before the transition, not null
-     * @param offsetAfter  the offset at and after the transition, not null
+     * @param transition the transition date-time with the offset before the transition, not null
+     * @param offsetBefore the offset before the transition, not null
+     * @param offsetAfter the offset at and after the transition, not null
      */
     ZoneOffsetTransition(LocalDateTime transition, ZoneOffset offsetBefore, ZoneOffset offsetAfter) {
+        assert transition.getNano() == 0;
+        this.epochSecond = transition.toEpochSecond(offsetBefore);
         this.transition = transition;
         this.offsetBefore = offsetBefore;
         this.offsetAfter = offsetAfter;
-    }
+      }
 
     /**
      * Creates an instance from epoch-second and offsets.
      *
-     * @param epochSecond  the transition epoch-second
-     * @param offsetBefore  the offset before the transition, not null
-     * @param offsetAfter  the offset at and after the transition, not null
+     * @param epochSecond the transition epoch-second
+     * @param offsetBefore the offset before the transition, not null
+     * @param offsetAfter the offset at and after the transition, not null
      */
     ZoneOffsetTransition(long epochSecond, ZoneOffset offsetBefore, ZoneOffset offsetAfter) {
+        this.epochSecond = epochSecond;
         this.transition = LocalDateTime.ofEpochSecond(epochSecond, 0, offsetBefore);
         this.offsetBefore = offsetBefore;
         this.offsetAfter = offsetAfter;
     }
 
-    //-----------------------------------------------------------------------
+    // -----------------------------------------------------------------------
     /**
      * Defend against malicious streams.
      *
@@ -182,20 +177,19 @@ public final class ZoneOffsetTransition
     }
 
     /**
-     * Writes the object using a
-     * <a href="../../../serialized-form.html#java.time.zone.Ser">dedicated serialized form</a>.
-     * @serialData
-     * Refer to the serialized form of
-     * <a href="../../../serialized-form.html#java.time.zone.ZoneRules">ZoneRules.writeReplace</a>
-     * for the encoding of epoch seconds and offsets.
-     * <pre style="font-size:1.0em">{@code
+     * Writes the object using a <a href="../../../serialized-form.html#java.time.zone.Ser">dedicated
+     * serialized form</a>.
      *
-     *   out.writeByte(2);                // identifies a ZoneOffsetTransition
-     *   out.writeEpochSec(toEpochSecond);
-     *   out.writeOffset(offsetBefore);
-     *   out.writeOffset(offsetAfter);
-     * }
-     * </pre>
+     * @serialData Refer to the serialized form of <a
+     *     href="../../../serialized-form.html#java.time.zone.ZoneRules">ZoneRules.writeReplace</a>
+     *     for the encoding of epoch seconds and offsets.
+     *     <pre style="font-size:1.0em">{@code
+     * out.writeByte(2);                // identifies a ZoneOffsetTransition
+     * out.writeEpochSec(toEpochSecond);
+     * out.writeOffset(offsetBefore);
+     * out.writeOffset(offsetAfter);
+     * }</pre>
+     *
      * @return the replacing object, not null
      */
     private Object writeReplace() {
@@ -205,11 +199,11 @@ public final class ZoneOffsetTransition
     /**
      * Writes the state to the stream.
      *
-     * @param out  the output stream, not null
+     * @param out the output stream, not null
      * @throws IOException if an error occurs
      */
     void writeExternal(DataOutput out) throws IOException {
-        Ser.writeEpochSec(toEpochSecond(), out);
+        Ser.writeEpochSec(epochSecond, out);
         Ser.writeOffset(offsetBefore, out);
         Ser.writeOffset(offsetAfter, out);
     }
@@ -217,7 +211,7 @@ public final class ZoneOffsetTransition
     /**
      * Reads the state from the stream.
      *
-     * @param in  the input stream, not null
+     * @param in the input stream, not null
      * @return the created object, not null
      * @throws IOException if an error occurs
      */
@@ -231,20 +225,20 @@ public final class ZoneOffsetTransition
         return new ZoneOffsetTransition(epochSecond, before, after);
     }
 
-    //-----------------------------------------------------------------------
+    // -----------------------------------------------------------------------
     /**
      * Gets the transition instant.
-     * <p>
-     * This is the instant of the discontinuity, which is defined as the first
-     * instant that the 'after' offset applies.
-     * <p>
-     * The methods {@link #getInstant()}, {@link #getDateTimeBefore()} and {@link #getDateTimeAfter()}
-     * all represent the same instant.
+     *
+     * <p>This is the instant of the discontinuity, which is defined as the first instant that the
+     * 'after' offset applies.
+     *
+     * <p>The methods {@link #getInstant()}, {@link #getDateTimeBefore()} and {@link
+     * #getDateTimeAfter()} all represent the same instant.
      *
      * @return the transition instant, not null
      */
     public Instant getInstant() {
-        return transition.toInstant(offsetBefore);
+        return Instant.ofEpochSecond(epochSecond);
     }
 
     /**
@@ -253,19 +247,19 @@ public final class ZoneOffsetTransition
      * @return the transition epoch second
      */
     public long toEpochSecond() {
-        return transition.toEpochSecond(offsetBefore);
+        return epochSecond;
     }
 
-    //-------------------------------------------------------------------------
+    // -------------------------------------------------------------------------
     /**
      * Gets the local transition date-time, as would be expressed with the 'before' offset.
-     * <p>
-     * This is the date-time where the discontinuity begins expressed with the 'before' offset.
-     * At this instant, the 'after' offset is actually used, therefore the combination of this
-     * date-time and the 'before' offset will never occur.
-     * <p>
-     * The combination of the 'before' date-time and offset represents the same instant
-     * as the 'after' date-time and offset.
+     *
+     * <p>This is the date-time where the discontinuity begins expressed with the 'before' offset. At
+     * this instant, the 'after' offset is actually used, therefore the combination of this date-time
+     * and the 'before' offset will never occur.
+     *
+     * <p>The combination of the 'before' date-time and offset represents the same instant as the
+     * 'after' date-time and offset.
      *
      * @return the transition date-time expressed with the before offset, not null
      */
@@ -275,11 +269,11 @@ public final class ZoneOffsetTransition
 
     /**
      * Gets the local transition date-time, as would be expressed with the 'after' offset.
-     * <p>
-     * This is the first date-time after the discontinuity, when the new offset applies.
-     * <p>
-     * The combination of the 'before' date-time and offset represents the same instant
-     * as the 'after' date-time and offset.
+     *
+     * <p>This is the first date-time after the discontinuity, when the new offset applies.
+     *
+     * <p>The combination of the 'before' date-time and offset represents the same instant as the
+     * 'after' date-time and offset.
      *
      * @return the transition date-time expressed with the after offset, not null
      */
@@ -289,8 +283,8 @@ public final class ZoneOffsetTransition
 
     /**
      * Gets the offset before the transition.
-     * <p>
-     * This is the offset in use before the instant of the transition.
+     *
+     * <p>This is the offset in use before the instant of the transition.
      *
      * @return the offset before the transition, not null
      */
@@ -300,8 +294,8 @@ public final class ZoneOffsetTransition
 
     /**
      * Gets the offset after the transition.
-     * <p>
-     * This is the offset in use on and after the instant of the transition.
+     *
+     * <p>This is the offset in use on and after the instant of the transition.
      *
      * @return the offset after the transition, not null
      */
@@ -311,10 +305,10 @@ public final class ZoneOffsetTransition
 
     /**
      * Gets the duration of the transition.
-     * <p>
-     * In most cases, the transition duration is one hour, however this is not always the case.
-     * The duration will be positive for a gap and negative for an overlap.
-     * Time-zones are second-based, so the nanosecond part of the duration will be zero.
+     *
+     * <p>In most cases, the transition duration is one hour, however this is not always the case. The
+     * duration will be positive for a gap and negative for an overlap. Time-zones are second-based,
+     * so the nanosecond part of the duration will be zero.
      *
      * @return the duration of the transition, positive for gaps, negative for overlaps
      */
@@ -333,10 +327,10 @@ public final class ZoneOffsetTransition
 
     /**
      * Does this transition represent a gap in the local time-line.
-     * <p>
-     * Gaps occur where there are local date-times that simply do not exist.
-     * An example would be when the offset changes from {@code +01:00} to {@code +02:00}.
-     * This might be described as 'the clocks will move forward one hour tonight at 1am'.
+     *
+     * <p>Gaps occur where there are local date-times that simply do not exist. An example would be
+     * when the offset changes from {@code +01:00} to {@code +02:00}. This might be described as 'the
+     * clocks will move forward one hour tonight at 1am'.
      *
      * @return true if this transition is a gap, false if it is an overlap
      */
@@ -346,10 +340,10 @@ public final class ZoneOffsetTransition
 
     /**
      * Does this transition represent an overlap in the local time-line.
-     * <p>
-     * Overlaps occur where there are local date-times that exist twice.
-     * An example would be when the offset changes from {@code +02:00} to {@code +01:00}.
-     * This might be described as 'the clocks will move back one hour tonight at 2am'.
+     *
+     * <p>Overlaps occur where there are local date-times that exist twice. An example would be when
+     * the offset changes from {@code +02:00} to {@code +01:00}. This might be described as 'the
+     * clocks will move back one hour tonight at 2am'.
      *
      * @return true if this transition is an overlap, false if it is a gap
      */
@@ -359,12 +353,12 @@ public final class ZoneOffsetTransition
 
     /**
      * Checks if the specified offset is valid during this transition.
-     * <p>
-     * This checks to see if the given offset will be valid at some point in the transition.
-     * A gap will always return false.
-     * An overlap will return true if the offset is either the before or after offset.
      *
-     * @param offset  the offset to check, null returns false
+     * <p>This checks to see if the given offset will be valid at some point in the transition. A gap
+     * will always return false. An overlap will return true if the offset is either the before or
+     * after offset.
+     *
+     * @param offset the offset to check, null returns false
      * @return true if the offset is valid during the transition
      */
     public boolean isValidOffset(ZoneOffset offset) {
@@ -373,40 +367,42 @@ public final class ZoneOffsetTransition
 
     /**
      * Gets the valid offsets during this transition.
-     * <p>
-     * A gap will return an empty list, while an overlap will return both offsets.
+     *
+     * <p>A gap will return an empty list, while an overlap will return both offsets.
      *
      * @return the list of valid offsets
      */
     List<ZoneOffset> getValidOffsets() {
         if (isGap()) {
-            return Collections.emptyList();
+          // Per Android 13 version it returns List.of(), but the method is doing the same thing, so we
+          // keep the original version.
+          return Collections.emptyList();
         }
         return Arrays.asList(getOffsetBefore(), getOffsetAfter());
     }
 
-    //-----------------------------------------------------------------------
+    // -----------------------------------------------------------------------
     /**
      * Compares this transition to another based on the transition instant.
-     * <p>
-     * This compares the instants of each transition.
-     * The offsets are ignored, making this order inconsistent with equals.
      *
-     * @param transition  the transition to compare to, not null
+     * <p>This compares the instants of each transition. The offsets are ignored, making this order
+     * inconsistent with equals.
+     *
+     * @param transition the transition to compare to, not null
      * @return the comparator value, negative if less, positive if greater
      */
     @Override
     public int compareTo(ZoneOffsetTransition transition) {
-        return this.getInstant().compareTo(transition.getInstant());
+        return Long.compare(epochSecond, transition.epochSecond);
     }
 
-    //-----------------------------------------------------------------------
+    // -----------------------------------------------------------------------
     /**
      * Checks if this object equals another.
-     * <p>
-     * The entire state of the object is compared.
      *
-     * @param other  the other object to compare to, null returns false
+     * <p>The entire state of the object is compared.
+     *
+     * @param other the other object to compare to, null returns false
      * @return true if equal
      */
     @Override
@@ -416,8 +412,9 @@ public final class ZoneOffsetTransition
         }
         if (other instanceof ZoneOffsetTransition) {
             ZoneOffsetTransition d = (ZoneOffsetTransition) other;
-            return transition.equals(d.transition) &&
-                offsetBefore.equals(d.offsetBefore) && offsetAfter.equals(d.offsetAfter);
+            return epochSecond == d.epochSecond
+                && offsetBefore.equals(d.offsetBefore)
+                && offsetAfter.equals(d.offsetAfter);
         }
         return false;
     }
@@ -429,10 +426,12 @@ public final class ZoneOffsetTransition
      */
     @Override
     public int hashCode() {
-        return transition.hashCode() ^ offsetBefore.hashCode() ^ Integer.rotateLeft(offsetAfter.hashCode(), 16);
+        return transition.hashCode()
+            ^ offsetBefore.hashCode()
+            ^ Integer.rotateLeft(offsetAfter.hashCode(), 16);
     }
 
-    //-----------------------------------------------------------------------
+    // -----------------------------------------------------------------------
     /**
      * Returns a string describing this object.
      *
@@ -451,5 +450,4 @@ public final class ZoneOffsetTransition
             .append(']');
         return buf.toString();
     }
-
 }
